0.03
 [Common]
 - Add Task::Map::Tube to SEE ALSO section in doc.
 - Update copyright years to 2015.

 [Map::Tube::Text::Table]
 - Add lines() method.

 [Map::Tube::Text::Table::Utils]
 - Fix table() subroutine for situation without headers.

0.02 2014-12-19T19:33:51+01:00
 - Fix dependencies.
 - Update META.yml file.

0.01 2014-12-19T08:21:12+01:00
 - First version.