@@ -8,6 +8,7 @@
 
  [Map::Tube::Text::Table::Utils]
  - Fix table() subroutine for situation without headers.
+ - Fix indentation in table() subroutine.
 
 0.02 2014-12-19T19:33:51+01:00
  - Fix dependencies.
